@@ -1,33 +1,55 @@
 package com.codecool.bytebattlers.service;
 
 import com.codecool.bytebattlers.controller.dto.ReviewDto;
+import com.codecool.bytebattlers.mapper.AppUserMapper;
+import com.codecool.bytebattlers.mapper.BoardGameMapper;
 import com.codecool.bytebattlers.mapper.ReviewMapper;
+import com.codecool.bytebattlers.model.AppUser;
+import com.codecool.bytebattlers.model.BoardGame;
+import com.codecool.bytebattlers.model.Review;
 import com.codecool.bytebattlers.repository.ReviewRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 public class ReviewService {
     private final ReviewMapper reviewMapper;
     private final ReviewRepository reviewRepository;
 
+    private final UserService userService;
+    private final AppUserMapper userMapper;
+
+    private final BoardGameService boardGameService;
+    private final BoardGameMapper boardGameMapper;
+
+
+
     @Autowired
-    public ReviewService(ReviewMapper reviewMapper, ReviewRepository reviewRepository) {
+    public ReviewService(ReviewMapper reviewMapper, ReviewRepository reviewRepository, UserService userService,
+                         AppUserMapper userMapper, BoardGameService boardGameService, BoardGameMapper boardGameMapper) {
         this.reviewMapper = reviewMapper;
         this.reviewRepository = reviewRepository;
+        this.userService = userService;
+        this.userMapper = userMapper;
+        this.boardGameService = boardGameService;
+        this.boardGameMapper = boardGameMapper;
     }
 
 
     public List<ReviewDto> findAll() {
-        return reviewRepository.findAll().stream().map(reviewMapper::toDto).collect(Collectors.toList());
+        return reviewRepository.findAll().stream().map(reviewMapper::toDto).toList();
     }
 
     public void save(ReviewDto reviewDto) {
-        reviewRepository.save(reviewMapper.toEntity(reviewDto));
+        BoardGame foundBoardgame = boardGameService.findByPublicID(reviewDto.boardGamePublicID());
+        AppUser foundUser =  userService.findByPublicID(reviewDto.appUserPublicID());
+        Review review = reviewMapper.toEntity(reviewDto);
+        review.setAppUser(foundUser);
+        review.setBoardGame(foundBoardgame);
+        reviewRepository.save(review);
     }
 
     public ReviewDto findById(Long aLong) {
